--- a/es6-learning/server/views/index.ejs
+++ b/es6-learning/server/views/index.ejs
@@ -7,7 +7,9 @@
   <title>es6-learning</title>
 </head>
 <body>
-45534
+<p>es6</p>
+<p>慕课网</p>
+<p>好好学习</p>
 <script type="text/javascript" src="../js/index.js">
 
 </script>
